--- a/views/display_puppy.erb
+++ b/views/display_puppy.erb
@@ -1,5 +1,5 @@
 <body>
-  <p>Puppy Name: <%= @name %></p>
-  <p>Puppy Breed: <%= @breed %></p>
-  <p>Puppy Age: <%= @age %> months</p>
+  <p>Puppy Name: <%= @puppyyy["name"] %></p>
+  <p>Puppy Breed: <%= @puppyyy["breed"] %></p>
+  <p>Puppy Age: <%= @puppyyy["age"]  %> months</p>
 </body>
